--- a/themes/socialasset/assets/css/_home.css
+++ b/themes/socialasset/assets/css/_home.css
@@ -298,7 +298,9 @@ span.hm-wc-social-assets-top-shape {
 	background: #F4F5F9;
 }
 
-
+.upcoming-campaigns-head{
+	padding-bottom: 92px;
+}
 .upcoming-campaigns-head h4{
 	color: #0054FD;
 	margin-bottom: 20px;
