--- a/themes/socialasset/assets/css/_home-page.css
+++ b/themes/socialasset/assets/css/_home-page.css
@@ -900,6 +900,27 @@
 	.show-sm{
 		display: block!important;
 	}
+	.social-asset-welcome-section-inner h1 {
+	    font-size: 32px;
+	    line-height: 39px;
+	    padding-bottom: 25px;
+	}
+	.social-asset-welcome-section-inner em {
+	    font-size: 16px;
+	    line-height: 24px;
+	    padding-bottom: 15px;
+	}
+	.social-asset-welcome-section-inner p {
+	    font-size: 13px;
+	    line-height: 24px;
+	    padding-bottom: 36px;
+	}
+	.sa-welcome-grid-item-top-des-img {
+	    left: 1%;
+	}
+	.sa-welcome-grid-item-bottom-des-img {
+	    left: 0%;
+	}
 }
 
 @media(max-width: 575px){
