--- a/themes/socialasset/assets/css/_footer.css
+++ b/themes/socialasset/assets/css/_footer.css
@@ -83,16 +83,16 @@
   text-align: center;
   background: #0000;
   cursor: pointer;
+  color: #fff;
+}
+.nl-from-wrp button:hover{
+  color: #0055FF;
 }
 .nl-from-wrp button i{
   display: inline-block;
   vertical-align: baseline;
   padding-top: 4px;
-  color: #fff;
   font-size: 20px
-}
-.nl-from-wrp button:hover i{
-  color: #0055FF;
 }
 .ftr-col-2 ul li a{
   display: inline-block;
