--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -549,6 +549,46 @@ a.linkedin-login-btn:hover{
 .profile-img img{
 	border-radius: 100% 100%;
 }
+.profile-img-edit{
+	border-radius: 100% 100%;
+	width: 93px;
+	height: 93px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 25px;
+	box-shadow: 0 0 25px #e6e3e3;
+	border: 4px solid #fff;
+	background: #e9eaef;
+	position: relative;
+}
+
+.profile-img-edit input {
+    border-radius: 100% 100%;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    z-index: 2;
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+.profile-img-edit label{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    z-index: 1;
+    margin: 0;
+}
+
+
 
 .profile-basic-info-bx-cntlr hr{
 	border-top: 1px solid #d1d1d1;
