--- a/themes/socialasset/assets/css/_what-we-do.css
+++ b/themes/socialasset/assets/css/_what-we-do.css
@@ -122,14 +122,15 @@
 }
 .jjsg-des h3{
 	margin: 0;
-	padding-bottom: 18px;
-	line-height: 47px;
-	font-weight: 500;
+    padding-bottom: 18px;
+    line-height: 1.3;
+    font-weight: 500;
 }
 .jjsg-des p{
 	font-size: 15px;
-	line-height: 25px;
-	padding-bottom: 10px;
+    line-height: 25px;
+    padding-bottom: 0px;
+    margin: 0;
 }
 
 
@@ -203,7 +204,7 @@
 	text-align: center;
 	margin: 0;
 	color: #0055FF;
-	line-height: 40px;
+	line-height: 1.3;
 	padding-bottom: 60px;
 }
 .wwd-campaigns-grid-item ul li{
@@ -353,35 +354,8 @@
 	.wwd-campaigns-title h3 {
 	    padding-bottom: 35px;
 	}
-	.wwd-campaigns-grid-item ul li {
-	    width: 50%;
-	    padding-left: 0px;
-    	padding-right: 0px;
-    	padding-bottom: 20px;
-	}
-	.wwd-campaigns-grid-item ul li:last-child{
-		padding-bottom: 0;
-	}
-	.wwd-campaigns-grid-item-wrap {
-	    text-align: center;
-	    max-width: 200px;
-	    width: 100%;
-	    margin: 0 auto;
-	}
-	.join-journey-sct-grid-img-top,
-	.jjsg-des-top,
-	.join-journey-sct-grid-img-bottom,
-	.jjsg-des-bottom{
-		max-width: 680px;
-		width: 100%;
-		margin: 0 auto;
-		margin-bottom: 20px;
-	}
-	.join-journey-sct-grid-img-top-wrap, 
-	.jjsg-des-bottom-wrap,
-	.jjsg-des-top-wrap,
-	.join-journey-sct-grid-img-bottom-wrap{
-	    width: 100%;
+	.jjsg-media-icon img{
+		max-width: 40px;
 	}
 
 	
