--- a/themes/socialasset/assets/css/_page.css
+++ b/themes/socialasset/assets/css/_page.css
@@ -41,13 +41,13 @@ box-shadow: 0px 14px 23px 0px rgba(227,228,232,1);
 =====================*/
 
 .cookie-wrp{
-  position: fixed;
-  bottom: 70px;
-  left: 0;
-  right: 0;
-  z-index: 20;
-  padding-left: 15px;
-  padding-right: 15px;
+	position: fixed;
+	bottom: 70px;
+	left: 0;
+	right: 0;
+	z-index: 20;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 .cookie-inner{
 	max-width: 572px;
@@ -87,3 +87,55 @@ box-shadow: 0px 14px 23px 0px rgba(227,228,232,1);
 	color: #0055FF;
 	background: #fff;
 }
+
+
+
+
+
+
+
+
+@media(max-width: 1499px){
+
+}
+
+@media(max-width: 1399px){
+
+}
+
+@media(max-width: 1299px){
+
+}
+
+@media(max-width: 1199px){
+
+
+}
+
+@media(max-width: 991px){
+
+}
+
+@media(max-width: 767px){
+
+}
+
+@media(max-width: 575px){
+	.cookie-inner {
+	    padding: 30px 20px 35px;
+	}
+	.cookie-wrp button.agree-btn {
+	    width: 130px;
+	    height: 45px;
+	}
+
+}
+
+@media(max-width: 479px){
+
+
+}
+
+@media(max-width: 359px){
+
+} 
