--- a/themes/socialasset/assets/css/_home.css
+++ b/themes/socialasset/assets/css/_home.css
@@ -739,6 +739,7 @@ span.btm-q-icon{
 	color: #0055FF;
 	position: relative;
 	padding-right: 28px;
+	margin-top: 26px;
 }
 .hm-join-journey-sec .jjsg-des > a:hover{
 	opacity: .8;
